<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">College App</string>

    <string name="bold" tools:ignore="ReferenceType">@font/merienda_bold</string>
    <string name="regular" tools:ignore="ReferenceType">@font/merienda_regular</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="something_went_wrong">Something went wrong</string>
    <string name="home">Home</string>
    <string name="notice">Notice</string>
    <string name="faculty">Faculty</string>
    <string name="gallery">Gallery</string>
    <string name="about">About</string>
    <string name="e_learning">E-Learning</string>
    <string name="ebooks">Ebooks</string>
    <string name="themes">Themes</string>
    <string name="website">Website</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="developers">Developers</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home_title">title</string>
    <string name="home_description">about college des</string>
    <string name="departments">Departments</string>
    <string name="contact_details">Contact Details</string>
    <string name="no_data_found">No Data Found</string>
    <string name="cse">Computer Science</string>
    <string name="mechanical">Mechanical</string>
    <string name="ece">Electronics</string>
    <string name="convocation">Convocation</string>
    <string name="republic_day">Republic Day</string>
    <string name="signup">SignUp</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="error_required">Required</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>

</resources>