<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Todo multiple rv dynamic and progress bar during loading-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/text_title"
                    android:text="@string/cse" />

                <View
                    style="@style/separator_black"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDepartmentCS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:visibility="gone" />

                <include
                    android:id="@+id/CSNoData"
                    layout="@layout/layout_no_data_found" />

                <TextView
                    style="@style/text_title"
                    android:text="@string/ece" />

                <View
                    style="@style/separator_black"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDepartmentECE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:visibility="gone" />

                <include
                    android:id="@+id/ECENoData"
                    layout="@layout/layout_no_data_found" />

                <TextView
                    style="@style/text_title"
                    android:text="@string/mechanical" />

                <View
                    style="@style/separator_black"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDepartmentME"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:visibility="gone" />

                <include
                    android:id="@+id/MENoData"
                    layout="@layout/layout_no_data_found" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>