<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.home.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderLayout
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_slider_height" />

            <TextView
                style="@style/title_text"
                android:layout_marginTop="30dp"
                android:text="@string/home_title" />

            <TextView
                style="@style/regular_text_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_description" />

            <!--department layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@color/colorDark"
                android:orientation="vertical">

                <TextView
                    style="@style/title_text"
                    android:layout_marginTop="20dp"
                    android:text="@string/departments"
                    android:textColor="@color/white" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    android:elevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/regular_text_center"
                            android:text="CS" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey" />

                        <TextView
                            style="@style/regular_text_center"
                            android:text="CS" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey" />

                        <TextView
                            style="@style/regular_text_center"
                            android:text="CS" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <!--contact detail layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    style="@style/title_text"
                    android:text="@string/contact_details" />

                <TextView
                    style="@style/regular_text"
                    android:text="Name" />

                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:id="@+id/map"
                    android:src="@drawable/map"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>